force-app/main/default/objects/Comment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to case when comment is created from that object</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WeChat Comments</relationshipLabel>
    <relationshipName>WeChat_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>