force-app/main/default/objects/Comment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>DCP-1049
To capture user comments
Manually entered by user</description>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>