force-app/main/default/objects/Comment__c/fields/Customer_Read_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Read_Date_Time__c</fullName>
    <description>Date time when the customer first read the comment. Updated automatically from WeChat/ Charket integration</description>
    <label>Customer Read Date/Time</label>
    <type>DateTime</type>
</CustomField>