force-app/main/default/objects/Comment__c/fields/Internal_Non_Customer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Non_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked when WeChat users should not be able to see the comment.</description>
    <label>Internal (Non-Customer)</label>
    <type>Checkbox</type>
</CustomField>