force-app/main/default/objects/Comment__c/fields/Perform_Actions_as_Admin__c.field-meta.xml
<CustomField>
    <fullName>Perform_Actions_as_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-49914 This field is used to perform actions by Admin User on Creation of We Chat Comment</description>
    <label>Perform Actions as Admin</label>
    <type>Checkbox</type>
</CustomField>