force-app/main/default/objects/Comment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates the type of Comment to capture where it is being generated from.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Description</fullName>
            </value>
            <value>
                <fullName>WeChat Comment</fullName>
            </value>
            <value>
                <fullName>Illumina Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>