force-app/main/default/objects/Comment__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-1049
To associate the comment with work order
Manually selected</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>