force-app/main/default/objects/Comment__c/recordTypes/Case_WeChat.recordType-meta.xml
<RecordType>
    <fullName>Case_WeChat</fullName>
    <active>true</active>
    <label>Case - WeChat</label>
</RecordType>