force-app/main/default/objects/Comment__c/recordTypes/Work_Order_Manual.recordType-meta.xml
<RecordType>
    <fullName>Work_Order_Manual</fullName>
    <active>true</active>
    <label>Work Order - Manual</label>
</RecordType>