force-app/main/default/objects/Comment__c/validationRules/CheckEditWhenWOIsClosedOrComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditWhenWOIsClosedOrComplete</fullName>
    <active>false</active>
    <description>To Prevent edit/create of Comments when associated WO is completed/closed.</description>
    <errorConditionFormula>AND( 
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c), 
    OR(
        TEXT(Work_Order__r.SVMXC__Order_Status__c) == $Label.Closed,
        TEXT(Work_Order__r.SVMXC__Order_Status__c) == $Label.Completed
       )
    )</errorConditionFormula>
    <errorMessage>Comment cannot be created/edited when associated Work Order is Completed/Closed</errorMessage>
</ValidationRule>