force-app/main/default/objects/Comment__c/validationRules/RestrictNonTSUsersToCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictNonTSUsersToCreate</fullName>
    <active>true</active>
    <description>DCP-49914 - Restrict non TS users to create we chat comments
    </description>
    <errorConditionFormula>AND(
        NOT($Profile.Name ==$Label.Integration_SAP_Service),
        NOT($User.FirstName ==$Label.Automated_Process_User),
        NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
        NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
        NOT($Profile.Name == $Label.ProfileTechnicalSupport),
        NOT($Profile.Name == $Label.ProfileSystemAdmin),
        RecordType.DeveloperName == 'Case_WeChat',
        ISPICKVAL(Type__c, 'Illumina Comment')
        )</errorConditionFormula>
    <errorMessage>Only Technical support users can create/edit WeChat comments</errorMessage>
</ValidationRule>