force-app/main/default/objects/Comment__c/validationRules/RestrictTSUserForCharketCreatedComment.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictTSUserForCharketCreatedComment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
$Profile.Name == $Label.ProfileTechnicalSupport,
RecordType.DeveloperName == &apos;Case_WeChat&apos;,
CreatedBy.Profile.Name  == &apos;WeChat Charket Profile&apos;
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record.</errorMessage>
</ValidationRule>